--- a/index.html
+++ b/index.html
@@ -322,27 +322,32 @@
             }
         }
 
-       .visitor-count {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    background: rgba(0, 0, 0, 0.6);
-    padding: 8px 15px;
-    border-radius: 20px;
-    font-size: 0.8rem;
-    color: white;
+      .visitor-count {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(5px);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    transition: all 0.3s ease;
-    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    font-weight: bold;
+    color: white;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.5s ease;
 }
 
 @media (max-width: 768px) {
     .visitor-count {
-        top: 5px;
-        left: 5px;
-        font-size: 0.7rem;
-        padding: 6px 12px;
+        top: 10px;
+        right: 10px;
+        width: 30px;
+        height: 30px;
+        font-size: 0.8rem;
     }
 }
         .visitor-count:hover {
@@ -360,9 +365,7 @@
         <span style="left: 90%; top: 10%;"></span>
     </div>
 
-    <div class="visitor-count">
-        عدد الزيارات: <span id="visitorCount">0</span>
-    </div>
+   <div id="visitorCount" class="visitor-count">0</div>
 
     <div class="calculator">
         <h2>حاسبة تقسيط العمرة</h2>
@@ -563,6 +566,16 @@
             }
         });
 
+        
+function changeColor() {
+    const colors = ['#FF6B6B', '#4ECDC4', '#45B7D1', '#FFA07A', '#98D8C8', '#F7DC6F'];
+    const randomColor = colors[Math.floor(Math.random() * colors.length)];
+    document.getElementById('visitorCount').style.backgroundColor = randomColor;
+}
+
+setInterval(changeColor, 3000);
+
+        
         // تأثيرات حركية للمدخلات
         const inputs = document.querySelectorAll('select, input');
         inputs.forEach(input => {
