--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
         }
 
-
-/* Button Container */
+        /* Button Container */
         .user-type-buttons {
             display: flex;
             justify-content: center;
@@ -219,9 +218,7 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
-
-
-  @keyframes bounce {
+        @keyframes bounce {
             0%, 100% { transform: translateY(0); }
             50% { transform: translateY(-10px); }
         }
@@ -289,12 +286,10 @@
                 transition: none !important;
             }
         }
+    </style>
+</head>
 
-
-
-  </head>
-
-    <body>
+<body>
     <!-- Particles.js Container -->
     <div id="particles-js"></div>
 
@@ -340,8 +335,7 @@
         </div>
     </div>
 
-
-<!-- Essential JavaScript Libraries -->
+    <!-- Essential JavaScript Libraries -->
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
@@ -351,8 +345,7 @@
     <script src="https://kit.fontawesome.com/your-code.js"></script>
 
     <script>
-       
-              // تكوين Firebase
+        // تكوين Firebase
         const firebaseConfig = {
             apiKey: "AIzaSyDEQLPyt8Wp0oA5pvgKz93dczqYsBNDpvY",
             authDomain: "omrati-453e1.firebaseapp.com",
@@ -364,10 +357,10 @@
             measurementId: "G-RM7T583FYY"
         };
 
-
         // Initialize Firebase
         const app = firebase.initializeApp(firebaseConfig);
         const database = firebase.database();
+
 
         // Initialize AOS
         AOS.init({
